--- a/Webwizards/public/login.html
+++ b/Webwizards/public/login.html
@@ -4,7 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="login.css">
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    background-color: #e5e5f7;
+opacity: 0.7;
+background-image: radial-gradient(#000000 0.5px, #e5e5f7 0.5px);
+background-size: 10px 10px;
+}
+
+.container {
+    position: relative;
+    width: 540px;
+    height: 400px;
+    padding: 20px;
+    background: rgb(0, 0, 0);
+    border-radius: 10px 50px;
+    top:30%;
+    text-align: center;
+    color: white;
+    left:30%
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
+}
+
+.input-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 10px;
+}
+
+input[type="email"],
+input[type="password"],
+select {
+    width: 90%;
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button[type="submit"] {
+    background-color: #000000;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#error-message {
+    color: red;
+}
+
+    </style>>
 </head>
 <body>
     <div class="container">
@@ -22,6 +85,34 @@
             <p id="message"></p>
         </form>
     </div>
-    <script src="login.js"></script>
+    <script>
+        import axios from "axios"
+
+document.getElementById('loginForm').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent form submission
+
+    const email = document.getElementById('email').value;
+    const Password = document.getElementById('password').value;
+
+    // Simple validation
+    if (email && Password) {
+        document.getElementById('message').innerText = `Welcome!`;
+    } else {
+        document.getElementById('message').innerText = 'Please fill in all fields.';
+    }
+});
+await axios.post("http://localhost:3000/user/login",userInfo)
+        .then((res)=>{
+            console.log(res.data)
+            if (res.data){
+            alert("Login succesfull")}
+
+        })
+        .catch((err) =>{
+            if(err.resonse){
+                console.log(err);
+                alert("Error: "), err.response.data.message
+            }})
+    </script>
 </body>
 </html>
