--- a/Webwizards/public/register.html
+++ b/Webwizards/public/register.html
@@ -35,25 +35,28 @@
     body {
     font-family: Arial, sans-serif;
     background-color: black;
-    background: url("C:/Users/LENOVO/Desktop/DiddysParty/public/raspberry-7630520_1280.jpg/");
-}
+    background-color: #e5e5f7;
+opacity: 0.8;
+background-image: radial-gradient(#000000 0.5px, #e5e5f7 0.5px);
+background-size: 10px 10px;}
 
 .container {
     position: relative;
     width: 540px;
-    height: 1000px;
+    height: 700px;
     padding: 20px;
-    background: rgba(3, 3, 3, 0.048);
-    backdrop-filter: blur(4px);
+    background: rgb(255, 255, 255);
     border-radius: 10px 50px;
     top:30%;
     text-align: center;
-    color: white;
-    left:30%
+    color: rgb(0, 0, 0);
+    left:30%;
+    border-color: black ;
+    border-width: 20px;
 }
 
 h1 {
-    color: black;
+    color: rgb(0, 0, 0);
     text-align: center;
     margin-bottom: 20px;
     font-family:Georgia, 'Times New Roman', Times, serif ;
@@ -64,7 +67,7 @@ h1 {
 }
 
 label {
-    color: #000000;
+    color: #342e2e;
     display: block;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 10px;
@@ -78,13 +81,13 @@ select {
     height: 40px;
     margin-bottom: 20px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 5px;
 }
 
 button[type="submit"] {
     background-color: #000000;
-    color: #fff;
+    color: #ffffff;
     padding: 10px 20px; 
     border: none;
     border-radius: 5px;
