--- a/Webwizards/public/login.html
+++ b/Webwizards/public/login.html
@@ -18,7 +18,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" required>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit"><a href="todolist.html">Login</button>
             <p id="message"></p>
         </form>
     </div>
