--- a/Webwizards/public/todolist.html
+++ b/Webwizards/public/todolist.html
@@ -4,7 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="todolist.css">
+    <style>
+        body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 20px;
+  background: url("background-1794077_1280.jpg");
+}
+
+.container {
+  max-width: 600px;
+  margin: auto;
+  background: rgb(0, 0, 0);
+  opacity: 0.7;
+  padding: 20px;
+  border-radius: 25px;
+  margin-top: 60px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  text-align: center;
+  color: #ddd;
+
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input, textarea, select {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+button {
+  padding: 10px;
+  background-color: #929292;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #000000;
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.task {
+  background: #f9f9f9;
+  border: 1px solid #ddd;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.task-title {
+  font-weight: bold;
+}
+
+.edit-button, .delete-button {
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+    </style>
 </head>
 <body>
     <div class="container">
@@ -39,6 +113,68 @@
         </form>
         <ul id="task-list"></ul>
     </div>
-    <script src="todolist.js"></script>
+    <script type="module" >
+        const taskForm = document.getElementById('task-form');
+const taskList = document.getElementById('task-list');
+
+let tasks = [];
+
+taskForm.addEventListener('submit', function(event) {
+    event.preventDefault();
+    
+    const title = document.getElementById('task-title').value;
+    const details = document.getElementById('task-details').value;
+    const deadline = document.getElementById('task-deadline').value;
+    const genre = document.getElementById('task-genre').value;
+    const priority = document.getElementById('task-priority').value;
+
+    const task = {
+        id: Date.now(),
+        title,
+        details,
+        deadline,
+        genre,
+        priority: parseInt(priority)
+    };
+
+    tasks.push(task);
+    renderTasks();
+    taskForm.reset();
+});
+
+function renderTasks() {
+    taskList.innerHTML = '';
+    tasks.sort((a, b) => a.priority - b.priority).forEach(task => {
+        const li = document.createElement('li');
+        li.className = 'task';
+        li.innerHTML = `
+            <div class="task-title">${task.title} (Priority: ${task.priority})</div>
+            <div>${task.details}</div>
+            <div>Genre: ${task.genre}</div>
+            <div>Deadline: ${task.deadline}</div>
+            <button class="edit-button" onclick="editTask(${task.id})">Edit</button>
+            <button class="delete-button" onclick="deleteTask(${task.id})">Delete</button>
+        `;
+        taskList.appendChild(li);
+    });
+}
+
+function editTask(id) {
+    const task = tasks.find(t => t.id === id);
+    document.getElementById('task-title').value = task.title;
+    document.getElementById('task-details').value = task.details;
+    document.getElementById('task-deadline').value = task.deadline;
+    document.getElementById('task-genre').value = task.genre;
+    document.getElementById('task-priority').value = task.priority;
+
+    deleteTask(id);
+}
+
+function deleteTask(id) {
+    tasks = tasks.filter(task => task.id !== id);
+    renderTasks();
+}
+
+    </script>
 </body>
 </html>
