--- a/Webwizards/public/todolist.html
+++ b/Webwizards/public/todolist.html
@@ -83,7 +83,7 @@ ul {
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <form id="task-form">
+        <form method="post" action="/todo" id="task-form">
             <input type="text" id="task-title" placeholder="Task Title" required>
             <textarea id="task-details" placeholder="Detailed Explanation" required></textarea>
             <input type="date" id="task-deadline" required>
