--- a/Webwizards/public/register.html
+++ b/Webwizards/public/register.html
@@ -11,7 +11,7 @@
         <h1>Registration Form</h1>
         <form method="post" action="/user/signup" id="registration-form">
             <div class="form-group">
-                <label id="name" for="name">Name:</label>
+                <label for="name">Name:</label>
                 <input type="text" id="name" required>
             </div>
             <div class="form-group">
@@ -35,28 +35,25 @@
     body {
     font-family: Arial, sans-serif;
     background-color: black;
-    background-color: #e5e5f7;
-opacity: 0.8;
-background-image: radial-gradient(#000000 0.5px, #e5e5f7 0.5px);
-background-size: 10px 10px;}
+    background: url("./public/raspberry-7630520_1280.jpg");
+}
 
 .container {
     position: relative;
     width: 540px;
-    height: 700px;
+    height: 1000px;
     padding: 20px;
-    background: rgb(255, 255, 255);
+    background: rgba(3, 3, 3, 0.048);
+    backdrop-filter: blur(4px);
     border-radius: 10px 50px;
     top:30%;
     text-align: center;
-    color: rgb(0, 0, 0);
-    left:30%;
-    border-color: black ;
-    border-width: 20px;
+    color: white;
+    left:30%
 }
 
 h1 {
-    color: rgb(0, 0, 0);
+    color: black;
     text-align: center;
     margin-bottom: 20px;
     font-family:Georgia, 'Times New Roman', Times, serif ;
@@ -67,7 +64,7 @@ h1 {
 }
 
 label {
-    color: #342e2e;
+    color: #000000;
     display: block;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 10px;
@@ -81,13 +78,13 @@ select {
     height: 40px;
     margin-bottom: 20px;
     padding: 10px;
-    border: 1px solid #000000;
+    border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 button[type="submit"] {
     background-color: #000000;
-    color: #ffffff;
+    color: #fff;
     padding: 10px 20px; 
     border: none;
     border-radius: 5px;
@@ -99,10 +96,8 @@ button[type="submit"] {
 }
 
 </style>
-    <script type="module" type="text/javascript">
-
-
-import axios from "../node_modules/axios";
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="module" type="text/javascript">
 document.addEventListener('DOMContentLoaded', () => {
 const registrationForm = document.getElementById('registration-form');
 
@@ -134,14 +129,14 @@ registrationForm.addEventListener('submit', (e) => {
         axios.post("http://localhost:3000/user/signup",userInfo)
         .then((res)=>{
             console.log(res)
-            if (res){
-            alert("Login succesfull")}
+            // if (res){
+            // alert("Signup succesfull")}
 
         })
         .catch((err) =>{
             if(err.response){
                 console.log(err);
-                alert("Error: "), err.response.data.message
+            
             }})
         })
 })
